GIT_SILENT: as discussed with david, activate flags only when we use git repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,7 +105,10 @@ remove_definitions( -DQT_NO_CAST_FROM_ASCII )
 add_definitions(-DQT_NO_FOREACH)
 option(KDEPIM_RUN_AKONADI_TEST "Enable autotest based on Akonadi." TRUE)
 
-add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x060000)
+if (EXISTS "${CMAKE_SOURCE_DIR}/.git")
+   add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x060000)
+endif()
+
 ########### CMake Config Files ###########
 set(CMAKECONFIG_INSTALL_DIR "${KDE_INSTALL_CMAKEPACKAGEDIR}/KF5MailCommon")
 
