--- a/KF5MailCommonConfig.cmake.in
+++ b/KF5MailCommonConfig.cmake.in
@@ -4,7 +4,7 @@ find_dependency(KF5Akonadi "@AKONADI_VERSION@")
 find_dependency(KF5AkonadiMime "@AKONADIMIME_LIB_VERSION@")
 find_dependency(KF5Libkdepim "@LIBKDEPIM_LIB_VERSION@")
 find_dependency(KF5MessageComposer "@MESSAGELIB_LIB_VERSION@")
-find_dependency(KF5PimCommon "@MESSAGELIB_LIB_VERSION@")
+find_dependency(KF5PimCommon "@PIMCOMMON_LIB_VERSION@")
 find_dependency(KF5Completion "@KF5_MIN_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5MailCommonTargets.cmake")
