--- a/src/snippets/autotests/CMakeLists.txt
+++ b/src/snippets/autotests/CMakeLists.txt
@@ -2,3 +2,8 @@ ecm_add_test(snippetsmanagertest.cpp
     NAME_PREFIX "mailcommon-snippets-"
     LINK_LIBRARIES Qt5::Test Qt5::Gui KF5::MailCommon KF5::XmlGui
 )
+
+ecm_add_test(snippetwidgettest.cpp
+    NAME_PREFIX "mailcommon-snippets-"
+    LINK_LIBRARIES Qt5::Test Qt5::Gui KF5::MailCommon KF5::XmlGui
+)
