--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,5 +129,7 @@ add_subdirectory(src)
 if(BUILD_TESTING)
     add_subdirectory(autotests)
 endif()
-install(FILES mailcommon.renamecategories mailcommon.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
+if (ECM_VERSION VERSION_LESS "5.68.0")
+    install(FILES mailcommon.renamecategories mailcommon.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
+endif()
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
