Port 'Add To Addressbook' action to Akonadi::TagWidget
Summary:
They both look and behave the same, but Akonadi::TagWidget is the
"standard" widget used everywhere else.

Reviewers: mlaurent

Reviewed By: mlaurent

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D29252

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -240,6 +240,7 @@ PUBLIC
   KF5::PimCommonAkonadi
   KF5::Completion
 PRIVATE
+  KF5::AkonadiWidgets
   KF5::TextWidgets
   KF5::I18n
   KF5::LibkdepimAkonadi
