Adapt to new api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-set(PIM_VERSION "5.14.43")
+set(PIM_VERSION "5.14.44")
 
 project(mailcommon VERSION ${PIM_VERSION})
 
@@ -30,6 +30,7 @@ set(QT_REQUIRED_VERSION "5.13.0")
 
 set(MAILCOMMON_LIB_VERSION ${PIM_VERSION})
 set(AKONADIMIME_LIB_VERSION "5.14.43")
+set(AKONADICONTACT_LIB_VERSION "5.14.41")
 set(MESSAGELIB_LIB_VERSION "5.14.46")
 set(KMIME_LIB_VERSION "5.14.40")
 set(KMAILTRANSPORT_LIB_VERSION "5.14.40")
@@ -71,6 +72,7 @@ find_package(KF5Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5PimCommonAkonadi ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(Phonon4Qt5 ${PHONON_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5AkonadiContact ${AKONADICONTACT_LIB_VERSION} CONFIG REQUIRED)
 
 option(BUILD_DESIGNERPLUGIN "Build plugin for Qt Designer" ON)
 add_feature_info(DESIGNERPLUGIN ${BUILD_DESIGNERPLUGIN} "Build plugin for Qt Designer")
