Fix linking tests with MSVC
If the class is already exported from the library we cannot add the
.cpp file to the test again - MSVC then complains that the symbol is
exported twice (once from the test and once from the library that the
test is linked against)

--- a/src/filter/tests/CMakeLists.txt
+++ b/src/filter/tests/CMakeLists.txt
@@ -74,7 +74,7 @@ target_link_libraries(filteractionmissingtransportdialoggui
   KF5::MailTransport
 )
 
-set(filteractionmissingaccountdialoggui_SRCS filteractionmissingaccountdialoggui.cpp ../../../autotests/dummykernel.cpp ../../filter/kmfilteraccountlist.cpp ../dialog/filteractionmissingaccountdialog.cpp)
+set(filteractionmissingaccountdialoggui_SRCS filteractionmissingaccountdialoggui.cpp ../../../autotests/dummykernel.cpp  ../dialog/filteractionmissingaccountdialog.cpp)
 add_executable(filteractionmissingaccountdialoggui ${filteractionmissingaccountdialoggui_SRCS})
 ecm_mark_as_test(filteractionmissingaccountdialoggui)
 target_link_libraries(filteractionmissingaccountdialoggui
