Use git commit hook

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ include(ECMGeneratePriFile)
 
 include(ECMSetupVersion)
 include(FeatureSummary)
+if(ECM_VERSION VERSION_GREATER_EQUAL 5.79)
+   include(KDEGitCommitHooks)
+endif()
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
@@ -136,5 +139,8 @@ install(FILES
 add_subdirectory(src)
 if(BUILD_TESTING)
     add_subdirectory(autotests)
+endif()
+if(ECM_VERSION VERSION_GREATER_EQUAL 5.79)
+    kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
 endif()
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
