GIT_SILENT: we still depend against qt5.14 which doesn't have Qt:: support :(

--- a/src/mdn/autotests/CMakeLists.txt
+++ b/src/mdn/autotests/CMakeLists.txt
@@ -1,5 +1,5 @@
 ecm_add_test(mdnstateattributetest.cpp
     TEST_NAME mdnattributetest
     NAME_PREFIX "mailcommon-mdn-"
-    LINK_LIBRARIES Qt::Test Qt::Gui KF5::AkonadiCore KF5::MailCommon
+    LINK_LIBRARIES Qt5::Test Qt5::Gui KF5::AkonadiCore KF5::MailCommon
 )
