Reactivate cmake unity support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,16 +97,16 @@ add_definitions(-DQT_NO_KEYWORDS)
 option(KDEPIM_RUN_AKONADI_TEST "Enable autotest based on Akonadi." TRUE)
 
 # Not supported yet
-#option(USE_UNITY_CMAKE_SUPPORT "Use UNITY cmake support (speedup compile time)" FALSE)
+option(USE_UNITY_CMAKE_SUPPORT "Use UNITY cmake support (speedup compile time)" FALSE)
 
-#set(COMPILE_WITH_UNITY_CMAKE_SUPPORT false)
-#if (USE_UNITY_CMAKE_SUPPORT)
-#    if(${CMAKE_VERSION} VERSION_LESS "3.16.0")
-#        message(STATUS "CMAKE version is less than 3.16.0 . We can't use cmake unify build support")
-#    else()
-#        set(COMPILE_WITH_UNITY_CMAKE_SUPPORT true)
-#    endif()
-#endif()
+set(COMPILE_WITH_UNITY_CMAKE_SUPPORT false)
+if (USE_UNITY_CMAKE_SUPPORT)
+    if(${CMAKE_VERSION} VERSION_LESS "3.16.0")
+        message(STATUS "CMAKE version is less than 3.16.0 . We can't use cmake unify build support")
+    else()
+        set(COMPILE_WITH_UNITY_CMAKE_SUPPORT true)
+    endif()
+endif()
 
 add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x050f00)
 add_definitions(-DKF_DISABLE_DEPRECATED_BEFORE_AND_AT=0x054F00)
