GIT_SILENT: increase to qt5.15, cmake 3.16.0, use Qt:: vs Qt5:: for helping to port to qt6

--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(mailcommon_filter_test_LIBS Qt5::Test Qt5::Gui KF5::AkonadiCore KF5::AkonadiMime
+set(mailcommon_filter_test_LIBS Qt::Test Qt5::Gui KF5::AkonadiCore KF5::AkonadiMime
                                 KF5::MailCommon KF5::PimCommon Phonon::phonon4qt5
                                 KF5::KIOWidgets KF5::IconThemes KF5::TemplateParser
                                 KF5::MailTransport KF5::I18n KF5::SyntaxHighlighting
