fix cmake warning
"  Policy CMP0115 is not set: Source file extensions must be explicit.  Run
  "cmake --help-policy CMP0115" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.
"
we need to add file extension

--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -119,7 +119,7 @@ add_mailcommon_filter_test(filteractionwithaddresstest
 )
 
 if (KDEPIM_RUN_AKONADI_TEST)
-add_mailcommon_filter_akonadi_test(filteractionaddtoaddressbooktest
+add_mailcommon_filter_akonadi_test(filteractionaddtoaddressbooktest.cpp
     filteractionaddtoaddressbooktest.cpp
     ../filteractions/filteractionaddtoaddressbook.cpp
     ../filteractions/filteractionwithstringlist.cpp
