--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -526,4 +526,43 @@ if(BUILD_DESIGNERPLUGIN)
     add_subdirectory(designer)
 endif()
 
+if (BUILD_QCH)
+    ecm_add_qch(
+        KF5MailCommon_QCH
+        NAME KF5MailCommon
+        BASE_NAME KF5MailCommon
+        VERSION ${PIM_VERSION}
+        ORG_DOMAIN org.kde
+        SOURCES # using only public headers, to cover only public API
+            ${MailCommon_HEADERS}
+            ${MailCommon_top_HEADERS}
+            ${MailCommon_tag_HEADERS}
+            ${MailCommon_folder_HEADERS}
+            ${MailCommon_kernel_HEADERS}
+            ${MailCommon_interfaces_HEADERS}
+            ${MailCommon_filter_HEADERS}
+            ${MailCommon_job_HEADERS}
+            ${MailCommon_filteraction_HEADERS}
+            ${MailCommon_mdn_HEADERS}
+            ${MailCommon_collectionpage_HEADERS}
+            ${MailCommon_collectionpageattributes_HEADERS}
+            ${MailCommon_filterimporter_HEADERS}
+            ${MailCommon_snippets_HEADERS}
+            ${MailCommon_widgets_HEADERS}
+        #MD_MAINPAGE "${CMAKE_SOURCE_DIR}/README.md"
+        #IMAGE_DIRS "${CMAKE_SOURCE_DIR}/docs/pics"
+        LINK_QCHS
+            Qt5Core_QCH
+            Qt5Gui_QCH
+            Qt5Widgets_QCH
+        INCLUDE_DIRS
+            ${CMAKE_CURRENT_BINARY_DIR}
+        BLANK_MACROS
+            MAILCOMMON_EXPORT
+        TAGFILE_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
+        QCH_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
+        COMPONENT Devel
+    )
+endif()
+
 ecm_qt_install_logging_categories(EXPORT MAILCOMMON FILE mailcommon.categories DESTINATION ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
